# ratatidy

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: AGENTS.md  STATUS.md  architecture_overview.md  design_concepts.md  flow_analysis.md  full_plan.md  implementation_state.md  initial_plan.md  roadmap.md
scripts/: setup_mock.ps1
src/: app.rs  config.rs  grouping.rs  main.rs  qbittorrent.rs  scanner.rs  tui.rs  ui.rs
